--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
   "dependencies": {
     "director": "^1.2.8",
+    "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "todomvc-app-css": "^2.0.4"
