--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "todomvc-app-css": "^2.0.4"
+    "todomvc-app-css": "^2.0.4",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "http-server": "^0.9.0"
