--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "typescript": "^1.8.9",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "ts-loader": "^0.8.1"
   }
 }
