--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -30,6 +31,7 @@
     "webpack": "^1.12.14"
   },
   "devDependencies": {
+    "file-loader": "^0.8.5",
     "ts-loader": "^0.8.1"
   }
 }
