--- a/package.json
+++ b/package.json
@@ -23,15 +23,23 @@
   },
   "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
   "dependencies": {
-    "bootstrap": "^3.3.6",
     "jquery": "^2.2.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "typescript": "^1.8.9",
-    "webpack": "^1.12.14"
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.6",
+    "bootstrap-webpack": "0.0.5",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "ts-loader": "^0.8.1"
+    "imports-loader": "^0.6.5",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.2",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^0.8.1",
+    "typescript": "^1.8.9",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.14"
   }
 }
