--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bar loading application",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "http-server dist"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "http-server": "^0.9.0",
     "imports-loader": "^0.6.5",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
