--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server --progress --colors --open"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
     "imports-loader": "^0.6.5",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "open-browser-webpack-plugin": "0.0.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
