--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
   "dependencies": {
     "jquery": "^2.2.1",
+    "mocha": "^2.4.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
@@ -37,15 +38,14 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-typescript-preprocessor": "0.0.21",
     "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
+    "mocha": "^2.4.5",
     "open-browser-webpack-plugin": "0.0.2",
     "phantomjs-prebuilt": "^2.1.5",
     "style-loader": "^0.13.0",
