--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.2",
-    "mocha": "^2.4.5",
     "open-browser-webpack-plugin": "0.0.2",
     "phantomjs-prebuilt": "^2.1.5",
     "style-loader": "^0.13.0",
