fixed require cannot be found error

--- a/src/specs/tsconfig.json
+++ b/src/specs/tsconfig.json
@@ -21,6 +21,7 @@
     },
     "files": [
         "app.spec.ts",
-        "../../typings/browser.d.ts"
+        "../../typings/browser.d.ts",
+        "../js/globals.d.ts"
     ]
 }
