--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "load-perfect",
-  "version": "1.0.0",
-  "description": "Bar loading application",
-  "main": "app.js",
-  "scripts": {
-    "test": "karma start",
-    "start": "webpack-dev-server --progress --colors --open"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dalealleshouse/load-perfect.git"
-  },
-  "keywords": [
-    "bar",
-    "load",
-    "weight",
-    "lifting"
-  ],
-  "author": "Dale Alleshouse",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dalealleshouse/load-perfect/issues"
-  },
-  "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
-  "dependencies": {
-    "jquery": "^2.2.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
-  },
-  "devDependencies": {
-    "bootstrap": "^3.3.6",
-    "bootstrap-webpack": "0.0.5",
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "imports-loader": "^0.6.5",
-    "karma": "^0.13.22",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack": "^1.7.0",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.2",
-    "mocha": "^2.4.5",
-    "open-browser-webpack-plugin": "0.0.2",
-    "phantomjs-prebuilt": "^2.1.5",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.1",
-    "typescript": "^1.8.9",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
-  }
+    "name": "load-perfect",
+    "version": "1.0.0",
+    "description": "Bar loading application",
+    "main": "app.js",
+    "scripts": {
+        "build": "webpack",
+        "test": "karma start",
+        "start": "webpack-dev-server --progress --colors --open"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/dalealleshouse/load-perfect.git"
+    },
+    "keywords": [
+        "bar",
+        "load",
+        "weight",
+        "lifting"
+    ],
+    "author": "Dale Alleshouse",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/dalealleshouse/load-perfect/issues"
+    },
+    "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
+    "dependencies": {
+        "jquery": "^2.2.1",
+        "react": "^0.14.7",
+        "react-dom": "^0.14.7"
+    },
+    "devDependencies": {
+        "bootstrap": "^3.3.6",
+        "bootstrap-webpack": "0.0.5",
+        "chai": "^3.5.0",
+        "css-loader": "^0.23.1",
+        "exports-loader": "^0.6.3",
+        "extract-text-webpack-plugin": "^1.0.1",
+        "file-loader": "^0.8.5",
+        "imports-loader": "^0.6.5",
+        "karma": "^0.13.22",
+        "karma-chai": "^0.1.0",
+        "karma-mocha": "^0.2.2",
+        "karma-mocha-reporter": "^2.0.0",
+        "karma-phantomjs-launcher": "^1.0.0",
+        "karma-webpack": "^1.7.0",
+        "less": "^2.6.1",
+        "less-loader": "^2.2.2",
+        "mocha": "^2.4.5",
+        "open-browser-webpack-plugin": "0.0.2",
+        "phantomjs-prebuilt": "^2.1.5",
+        "style-loader": "^0.13.0",
+        "ts-loader": "^0.8.1",
+        "typescript": "^1.8.9",
+        "url-loader": "^0.5.7",
+        "webpack": "^1.12.14",
+        "webpack-dev-server": "^1.14.1"
+    }
 }
