--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/dalealleshouse/load-perfect#readme",
   "dependencies": {
+    "es6-shim": "^0.35.0",
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
