--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "redux": "^3.3.1",
     "tsmonad": "^0.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "css-loader": "^0.23.1",
+    "deep-freeze": "0.0.1",
     "eslint": "^2.5.1",
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
